--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<!doctype html>
-<title>HalloCheeky</title>
-<style>
-  body { text-align: center; padding: 150px;}
-  display: block;
-margin-left: auto;
-margin-right: auto
-  h1 { font-size: 50px; }
-  body { font: 20px Helvetica, sans-serif; color: #333; }
-  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
-  a { color: #FFFFFF; text-decoration: none; }
-  a:hover { color: #333; text-decoration: none; }
-</style>
+<!DOCTYPE html>
+<html lang="en">
 
-<div>
-    <img src="hallocheeky.png" width="80%" height="80%" alt="foo" />
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+<title>HalloCheeky</title>
+<!-- CSS -->
+<link href="style.css" rel="stylesheet">
+
+<div class="Container">
+    <div class="Content">
+      <img src="hallocheeky.png" width="80%" height="80%" alt="foo" />
+    </div>
 </div>
